grammar.txt
ARGUMENT_LIST: (EXPRESSION)*

BOOLEAN: LITERAL_BOOLEAN //true or false

COMPOUND_STATEMENT: (STATEMENT)*

CONDITIONAL_STATEMENT: IF EXPRESSION THEN ENCLOSED_COMPOUND_STATEMENT (OR IF EXPRESSION THEN ENCLOSED_COMPOUND_STATEMENT)* (OR ENCLOSED_COMPOUND_STATEMENT)

DECIMAL: LITERAL_DECIMAL

ENCLOSED_COMPOUND_STATEMENT: L_BLOCK_BRACKET COMPOUND_STATEMENT R_BLOCK_BRACKET

EXPRESSION: TERM (OPERATION TERM)*

FUNCTION_DECLARATION_STATEMENT: DEFINITION VARIABLE ENCLOSED_COMPOUND_STATEMENT

INTEGER: LITERAL_INTEGER

INVOCATION_STATEMENT: VARIABLE L_PAREN EXPRESSION R_PAREN

LOOP_STATEMENT: LOOP EXPRESSION THEN ENCLOSED_COMPOUND_STATEMENT

NUMBER: DECIMAL|INTEGER

STATEMENT: CONDITIONAL_STATEMENT|ENCLOSED_COMPOUND_STATEMENT|FUNCTION_DECLARATION_STATEMENT|INVOCATION_STATEMENT|LOOP_STATEMENT|STATIC_DECLARATION_STATEMENT

STATIC_DECLARATION_STATEMENT: STATIC VARIABLE ENCLOSED_COMPOUND_STATEMENT

STRING: LITERAL_STRING

UNARY_EXPRESSION: OPERATION TERM

VARIABLE: IDENTIFIER (QUALIFIER IDENTIFIER)*

VARIABLE_DECLARATION_STATEMENT: DEFINITION VARIABLE ENCLOSED_EXPRESSION
